# Bactinfection

./: README.md  environment.yml  pyproject.toml  setup.cfg
automated/: Automated.ipynb
bactinfection/: __init__.py  analysis.py  annotateml.py  automated.py  dataloader.py  folders.py  gui.py  parameters.py  process.py  segmentation.py  utils.py
notebooks/: Automated.ipynb  data_analysis.ipynb  segmentation.ipynb  training.ipynb
